--- a/N3.ini
+++ b/N3.ini
@@ -72,9 +72,9 @@ emoji=游戏,🎮
 ;设置规则标志位
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Unbreak.list
 surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/EKyero/SubRuleset/master/NeteaseMusic.list
+surge_ruleset=🎮 CODM,https://raw.githubusercontent.com/easlandll/sub_rules/master/codm.list
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/China.list
 surge_ruleset=DIRECT,rules/NobyDa/Surge/Download.list
-surge_ruleset=🎮 CODM,https://raw.githubusercontent.com/easlandll/sub_rules/master/codm.list
 surge_ruleset=🌏 国内媒体,rules/lhie1/Surge/Surge 3/Provider/Domestic.list
 surge_ruleset=🛑 广告拦截,rules/NobyDa/Surge/AdRule.list
 surge_ruleset=🛑 广告拦截,rules/ConnersHua/Surge/Ruleset/Hijacking.list
@@ -95,7 +95,7 @@ custom_proxy_group=🎥 YouTube`select`[]🔰 线路选择`[]🇭🇰 BGP 香港
 custom_proxy_group=📲 电报代理`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`(新)`[]⏩ 直连
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 线路选择`(台)`[]⏩ 直连
 custom_proxy_group=🎵 网易云音乐`select`[]⏩ 直连`(解锁)
-custom_proxy_group=🎮 CODM`select`[]⏩ 直连`[]🔰 线路选择
+custom_proxy_group=🎮 CODM`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`(新)`[]⏩ 直连
 custom_proxy_group=🌍 国外媒体`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
 custom_proxy_group=🌏 国内媒体`select`[]⏩ 直连`[]🔰 线路选择
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
