--- a/N3.ini
+++ b/N3.ini
@@ -94,7 +94,7 @@ custom_proxy_group=🎥 NETFLIX`select`[]🔰 线路选择`(BGP|🇸🇬 IPLC)`[
 custom_proxy_group=🎥 YouTube`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
 custom_proxy_group=📲 电报代理`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`(新)`[]⏩ 直连
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 线路选择`(台)`[]⏩ 直连
-custom_proxy_group=🎵 网易云音乐`select`[]⏩ 直连`(解锁)
+custom_proxy_group=🎵 网易云音乐`select`[](解锁)`⏩ 直连
 custom_proxy_group=🎮 CODM`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`(新)`[]⏩ 直连
 custom_proxy_group=🌍 国外媒体`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
 custom_proxy_group=🌏 国内媒体`select`[]⏩ 直连`[]🔰 线路选择
