--- a/N3.ini
+++ b/N3.ini
@@ -67,6 +67,7 @@ emoji=南非,🇿🇦
 emoji=(大陆|中国|江苏|北京|上海|广州|深圳|杭州|徐州|青岛|宁波|镇江),🇨🇳
 emoji=解锁,🎵
 emoji=游戏,🎮
+emoji=个人,⭐️
 ;设置规则标志位
 
 ;设置规则标志位
@@ -89,7 +90,7 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 线路选择`select`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`[]⏩ 直连
+custom_proxy_group=🔰 线路选择`select`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`(个人)`[]⏩ 直连
 custom_proxy_group=🎥 NETFLIX`select`[]🔰 线路选择`(BGP|🇸🇬 IPLC)`[]⏩ 直连
 custom_proxy_group=🎥 YouTube`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
 custom_proxy_group=📲 电报代理`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`(新)`[]⏩ 直连
