--- a/N3.ini
+++ b/N3.ini
@@ -64,7 +64,6 @@ emoji=个人,⭐️
 ;设置规则标志位
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Unbreak.list
 surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/EKyero/SubRuleset/master/NeteaseMusic.list
-surge_ruleset=🎮 Netch,https://raw.githubusercontent.com/sigvoid/sub_rules/master/Netch.list
 surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/China.list
 surge_ruleset=DIRECT,rules/NobyDa/Surge/Download.list
 surge_ruleset=🌏 国内媒体,rules/lhie1/Surge/Surge 3/Provider/Domestic.list
@@ -78,6 +77,7 @@ surge_ruleset=📲 电报代理,rules/ConnersHua/Surge/Ruleset/Telegram.list
 surge_ruleset=🔰 线路选择,rules/ConnersHua/Surge/Ruleset/Global.list
 surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=🐟 漏网之鱼,[]FINAL
+surge_ruleset=🎮 UDP,https://raw.githubusercontent.com/sigvoid/sub_rules/master/Match.list
 ;设置规则标志位
 
 ;设置分组标志位
@@ -87,10 +87,10 @@ custom_proxy_group=🎥 YouTube`select`[]🔰 线路选择`[]🇭🇰 BGP 香港
 custom_proxy_group=📲 电报代理`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`(新)`[]⏩ 直连
 custom_proxy_group=📺 巴哈姆特`select`[]🔰 线路选择`(台)`[]⏩ 直连
 custom_proxy_group=🎵 网易云音乐`select`[]⏩ 直连`(解锁)
-custom_proxy_group=🎮 Netch`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`[]⏩ 直连
 custom_proxy_group=🌍 国外媒体`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
 custom_proxy_group=🌏 国内媒体`select`[]⏩ 直连`[]🔰 线路选择
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
+custom_proxy_group=🎮 UDP`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`[]⏩ 直连
 custom_proxy_group=🛑 广告拦截`select`[]🚫 屏蔽`[]⏩ 直连
 custom_proxy_group=⏩ 直连`select`[]DIRECT
 custom_proxy_group=🚫 屏蔽`select`[]REJECT
