--- a/N3.ini
+++ b/N3.ini
@@ -1,108 +1,80 @@
-;设置规则标志位
-rename_node=中继@BGP
-rename_node=专线@IPLC
-rename_node=上海 → @沪
-rename_node=北京 → @京
-rename_node=深圳 → @深
-rename_node=山东 → @鲁
-rename_node=广州 → @广
-rename_node=江苏 → @苏
-rename_node=深圳 → @深
-rename_node=浙江 → @浙
-rename_node=新加坡@新
-rename_node=韩国@韩
-rename_node=美国@美
-rename_node=香港@港
-rename_node=日本@日
-rename_node=台湾@台
-rename_node=俄罗斯@俄
-rename_node=澳大利亚@澳
-rename_node=英国@英
-rename_node=德国@德
-rename_node=印度@印
-;设置规则标志位
+[custom]
+;不要随意改变关键字，否则会导致出错
+;acl4SSR规则
+
+;去广告：支持
+;自动测速：支持
+;微软分流：支持
+;苹果分流：支持
+;增强中国IP段：支持
+;增强国外GFW：支持
 
 ;设置规则标志位
-emoji=(流量|时间|应急),🏳️‍🌈
-emoji=阿根廷,🇦🇷
-emoji=(奥地利|维也纳),🇦🇹
-emoji=(澳大利亚|悉尼|澳),🇦🇺
-emoji=(巴西|圣保罗),🇧🇷
-emoji=(加拿大|蒙特利尔|温哥华),🇨🇦
-emoji=(瑞士|苏黎世),🇨🇭
-emoji=(德|德国|法兰克福),🇩🇪
-emoji=(芬兰|赫尔辛基),🇫🇮
-emoji=(法国|巴黎|法),🇫🇷
-emoji=(英国|伦敦|英),🇬🇧
-emoji=(港|香港|深港|沪港),🇭🇰
-emoji=(印尼|印度尼西亚|雅加达),🇮🇩
-emoji=(爱尔兰|都柏林),🇮🇪
-emoji=(印度|孟买|印),🇮🇳
-emoji=(意大利|米兰|意),🇮🇹
-emoji=(日|日本|东京|大阪|埼玉|沪日),🇯🇵
-emoji=(朝鲜|朝),🇰🇵
-emoji=(韩国|首尔|韩),🇰🇷
-emoji=澳门,🇲🇴
-emoji=马来西亚,🇲🇾
-emoji=(荷兰|阿姆斯特丹),🇳🇱
-emoji=菲律宾,🇵🇭
-emoji=罗马尼亚,🇷🇴
-emoji=(俄罗斯|伯力|莫斯科|圣彼得堡|西伯利亚|新西伯利亚|俄),🇷🇺
-emoji=(新|新加坡|狮城),🇸🇬
-emoji=(泰国|曼谷|泰),🇹🇭
-emoji=(土耳其|伊斯坦布尔),🇹🇷
-emoji=(台|台湾|台北|台中|新北|彰化),🇹🇼
-emoji=(美|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|沪美),🇺🇲
-emoji=越南,🇻🇳
-emoji=南非,🇿🇦
-emoji=(大陆|中国|江苏|北京|上海|广州|深圳|杭州|徐州|青岛|宁波|镇江),🇨🇳
-emoji=解锁,🎵
-emoji=游戏,🎮
-emoji=个人,⭐️
-;设置规则标志位
-
-;设置规则标志位
-surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/Unbreak.list
-surge_ruleset=🎵 网易云音乐,https://raw.githubusercontent.com/EKyero/SubRuleset/master/NeteaseMusic.list
-surge_ruleset=🎮 CODM,https://raw.githubusercontent.com/easlandll/sub_rules/master/codm.list
-surge_ruleset=DIRECT,rules/ConnersHua/Surge/Ruleset/China.list
-surge_ruleset=DIRECT,rules/NobyDa/Surge/Download.list
-surge_ruleset=🌏 国内媒体,rules/lhie1/Surge/Surge 3/Provider/Domestic.list
-surge_ruleset=🛑 广告拦截,rules/NobyDa/Surge/AdRule.list
-surge_ruleset=🛑 广告拦截,rules/ConnersHua/Surge/Ruleset/Hijacking.list
-surge_ruleset=🎥 YouTube,rules/ConnersHua/Surge/Ruleset/Media/YouTube.list
-surge_ruleset=🎥 NETFLIX,rules/ConnersHua/Surge/Ruleset/Media/Netflix.list
-surge_ruleset=📺 巴哈姆特,rules/ConnersHua/Surge/Ruleset/Media/Bahamut.list
-surge_ruleset=🌍 国外媒体,rules/ConnersHua/Surge/Ruleset/GlobalMedia.list
-surge_ruleset=📲 电报代理,rules/ConnersHua/Surge/Ruleset/Telegram.list
-surge_ruleset=🔰 线路选择,rules/ConnersHua/Surge/Ruleset/Global.list
-surge_ruleset=DIRECT,[]GEOIP,CN
-surge_ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
+ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 线路选择`select`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`(个人)`[]⏩ 直连
-custom_proxy_group=🎥 NETFLIX`select`[]🔰 线路选择`(BGP|🇸🇬 IPLC)`[]⏩ 直连
-custom_proxy_group=🎥 YouTube`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
-custom_proxy_group=📲 电报代理`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`(新)`[]⏩ 直连
-custom_proxy_group=📺 巴哈姆特`select`[]🔰 线路选择`(台)`[]⏩ 直连
-custom_proxy_group=🎵 网易云音乐`select`[]⏩ 直连`(解锁)
-custom_proxy_group=🎮 CODM`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`[]🇭🇰 IPLC 香港`[]🇯🇵 IPLC 日本`[]🇸🇬 IPLC 狮城`[]🇺🇲 IPLC 美国`[]🇺🇳 IPLC 其他`[]⏩ 直连
-custom_proxy_group=🌍 国外媒体`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
-custom_proxy_group=🌏 国内媒体`select`[]⏩ 直连`[]🔰 线路选择
-custom_proxy_group=🐟 漏网之鱼`select`[]🔰 线路选择`[]🇭🇰 BGP 香港`[]🇯🇵 BGP 日本`[]🇸🇬 BGP 狮城`[]🇹🇼 BGP 台湾`[]🇺🇲 BGP 美国`[]🇺🇳 BGP 其他`(BGP|CN2)`[]⏩ 直连
-custom_proxy_group=🛑 广告拦截`select`[]🚫 屏蔽`[]⏩ 直连
-custom_proxy_group=⏩ 直连`select`[]DIRECT
-custom_proxy_group=🚫 屏蔽`select`[]REJECT
-custom_proxy_group=🇭🇰 IPLC 香港`url-test`🇭🇰 IPLC`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇯🇵 IPLC 日本`url-test`🇯🇵 IPLC`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇸🇬 IPLC 狮城`url-test`🇸🇬 IPLC`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇺🇲 IPLC 美国`url-test`🇺🇲 IPLC`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇺🇳 IPLC 其他`select`^((?!(🇭🇰|🇯🇵|🇸🇬|🇺🇲)).)*IPLC((?!(🇭🇰|🇯🇵|🇸🇬|🇺🇲)).)*$`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇭🇰 BGP 香港`url-test`🇭🇰 BGP`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇯🇵 BGP 日本`url-test`🇯🇵 BGP`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇸🇬 BGP 狮城`url-test`🇸🇬 BGP`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇹🇼 BGP 台湾`url-test`🇹🇼 BGP`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇺🇲 BGP 美国`url-test`🇺🇲 BGP`http://www.gstatic.com/generate_204`600
-custom_proxy_group=🇺🇳 BGP 其他`select`^((?!(🇭🇰|🇯🇵|🇸🇬|🇹🇼|🇺🇲)).)*BGP((?!(🇭🇰|🇯🇵|🇸🇬|🇹🇼|🇺🇲)).)*$`http://www.gstatic.com/generate_204`600
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚇 手动转发`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🐴 私有节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚇 手动转发`relay`[]🚀 手动切换`[]🐴 私有节点
+custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
+custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🐴 私有节点`select`(MY|Private|PVT|个人|私|個)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
+
+enable_rule_generator=true
+overwrite_original_rules=true
+
+;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
+
+;luck
