--- a/N3.ini
+++ b/N3.ini
@@ -30,6 +30,7 @@ ruleset=🎮 游戏平台,https://github.com/sigvoid/sub_rules/raw/master/Steam.
 ;ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset=🤖 Openai,https://github.com/sigvoid/sub_rules/raw/master/openai.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🎯 全球直连,https://github.com/sigvoid/sub_rules/raw/master/CdnDirect.list
@@ -72,6 +73,9 @@ custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singa
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`3000,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 custom_proxy_group=🚇 手动转发`relay`[]🚀 手动切换`[]🐴 私有节点
+custom_proxy_group=🚀 Openai起`select`.*
+custom_proxy_group=🚀 Openai终`select`.*
+custom_proxy_group=🤖 Openai`relay`[]🚀 Openai起`[]🚀 Openai终
 ;设置分组标志位
 
 enable_rule_generator=true
