--- a/N3.ini
+++ b/N3.ini
@@ -45,11 +45,13 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚇 手动转发`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🐴 私有节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]☂️ 故障转移`[]🚇 自动转发`[]🚇 手动转发`[]♻️ 自动选择`[]🚀 手动切换`[]🐴 私有节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🐴 私有节点`select`(MY|Private|PVT|个人|私|個)`http://cp.cloudflare.com/generate_204`3000,,50
-custom_proxy_group=✈️ Netch`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`3000,,50
+custom_proxy_group=🐴 私有节点`select`(MY|Private|PVT|个人|私|個)
+custom_proxy_group=✈️ Netch`select`[]🚀 节点选择`🚀 手动切换`[]DIRECT
+custom_proxy_group=♻️ 自动选择`url-test`[]♻️ 机场自动`[]♻️ 私有自动`http://cp.cloudflare.com/generate_204`600,2,50
+custom_proxy_group=♻️ 机场自动`url-test`(^(?!.*(MY|Private|PVT|个人|私|個)).*)`http://cp.cloudflare.com/generate_204`600,2,50
+custom_proxy_group=♻️ 私有自动`url-test`(MY|Private|PVT|个人|私|個)`http://cp.cloudflare.com/generate_204`600,2,50
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 ;custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 ;custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
@@ -75,6 +77,8 @@ custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`3000,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`3000,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
+custom_proxy_group=☂️ 故障转移`fallback`[]🚇 自动转发`[]♻️ 机场自动`[]♻️ 私有自动`http://cp.cloudflare.com/generate_204`600,2,50
+custom_proxy_group=🚇 自动转发`relay`[]♻️ 机场自动`[]♻️ 私有自动
 custom_proxy_group=🚇 手动转发`relay`[]🚀 手动切换`[]🐴 私有节点
 custom_proxy_group=🚀 Openai起`select`.*
 custom_proxy_group=🚀 Openai终`select`.*
