--- a/N3.ini
+++ b/N3.ini
@@ -48,7 +48,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]☂️ 故障转移`[]🚇 自动转发`[]🚇 手动转发`[]♻️ 自动选择`[]🚀 手动切换`[]🐴 私有节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🐴 私有节点`select`(MY|Private|PVT|个人|私|個)
-custom_proxy_group=✈️ Netch`select`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=✈️ Netch`select`[]🚀 节点选择`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`[]♻️ 机场自动`[]♻️ 私有自动`http://cp.cloudflare.com/generate_204`600,2,50
 custom_proxy_group=♻️ 机场自动`url-test`(^(?!.*(MY|Private|PVT|个人|私|個)).*)`http://cp.cloudflare.com/generate_204`600,2,50
 custom_proxy_group=♻️ 私有自动`url-test`(MY|Private|PVT|个人|私|個)`http://cp.cloudflare.com/generate_204`600,2,50
