--- a/N3.ini
+++ b/N3.ini
@@ -85,6 +85,8 @@ custom_proxy_group=🚀 Openai终`select`.*
 custom_proxy_group=🤖 Openai`relay`[]🚀 Openai起`[]🚀 Openai终
 ;设置分组标志位
 
+rename_node=^\?\?@
+
 enable_rule_generator=true
 overwrite_original_rules=true
 
