--- a/N3.ini
+++ b/N3.ini
@@ -49,7 +49,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]☂️ 故障转移`[]🚇 自动转发`[]🚇 手动转发`[]♻️ 自动选择`[]🚀 手动切换`[]🐴 私有节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🐴 私有节点`select`(MY|Private|PVT|个人|私|個)
-custom_proxy_group=📺 Emby`select`[]🚀 节点选择`[]DIRECT`[]🚀 手动切换`(Emby)
+custom_proxy_group=📺 Emby`select`(Emby)`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]DIRECT`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 custom_proxy_group=💾 游戏下载`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 custom_proxy_group=✈️ Netch`select`[]🚀 节点选择`.*`[]DIRECT
