--- a/GeneralClashConfig.yml
+++ b/GeneralClashConfig.yml
@@ -72,8 +72,8 @@ dns:
      - '*.lan'
      - localhost.ptlogin2.qq.com
   nameserver:
-     - 223.5.5.5 # 阿里DNS
-     #- 180.76.76.76 # 百度DNS
+     #- 223.5.5.5 # 阿里DNS
+     - 180.76.76.76 # 百度DNS
      - 119.29.29.29 # 腾讯DNS
      #- 117.50.11.11 # ONE DNS拦截版 恶意网站拦截、广告过滤
      #- 117.50.10.10 # ONE DNS纯净版 直接返回其真实的响应结果
